hildondesktopconf_DATA =           \
	desktop.conf               \
	top-panel.conf             \
	bottom-panel.conf 	   \
	notification-groups.conf

hildonnavigatordesktopentry_DATA = \
	app-switcher.desktop       \
        applications-menu.desktop  \
	switcher-menu.desktop

hildondesktopmenu_DATA = applications.menu

hildondesktopstartup_SCRIPTS = \
        hildon-desktop.sh

ossobackup_SCRIPTS = restore-menu.sh
ossobackupdir = $(sysconfdir)/osso-backup/restore.d/always

bin_SCRIPTS = install_sbapplet.sh

CLEANFILES = *~
